@@ -1795,31 +1795,13 @@ specifier|private
 name|boolean
 name|checkFatalErrors
 parameter_list|(
-name|ExecDriverTaskHandle
-name|th
+name|Counters
+name|ctrs
 parameter_list|,
 name|StringBuilder
 name|errMsg
 parameter_list|)
 block|{
-name|RunningJob
-name|rj
-init|=
-name|th
-operator|.
-name|getRunningJob
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-name|Counters
-name|ctrs
-init|=
-name|th
-operator|.
-name|getCounters
-argument_list|()
-decl_stmt|;
 if|if
 condition|(
 name|ctrs
@@ -1954,23 +1936,6 @@ block|}
 return|return
 literal|false
 return|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|// this exception can be tolerated
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-return|return
-literal|false
-return|;
-block|}
 block|}
 specifier|private
 name|boolean
@@ -2154,6 +2119,10 @@ argument_list|(
 name|newRj
 argument_list|)
 expr_stmt|;
+name|rj
+operator|=
+name|newRj
+expr_stmt|;
 block|}
 comment|// If fatal errors happen we should kill the job immediately rather than
 comment|// let the job retry several times, which eventually lead to failure.
@@ -2165,13 +2134,21 @@ block|{
 continue|continue;
 comment|// wait until rj.isComplete
 block|}
+name|Counters
+name|ctrs
+init|=
+name|th
+operator|.
+name|getCounters
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|fatal
 operator|=
 name|checkFatalErrors
 argument_list|(
-name|th
+name|ctrs
 argument_list|,
 name|errMsg
 argument_list|)
@@ -2207,7 +2184,9 @@ argument_list|)
 expr_stmt|;
 name|updateCounters
 argument_list|(
-name|th
+name|ctrs
+argument_list|,
+name|rj
 argument_list|)
 expr_stmt|;
 name|String
@@ -2301,7 +2280,7 @@ argument_list|,
 name|getId
 argument_list|()
 argument_list|,
-name|rj
+name|ctrs
 argument_list|)
 expr_stmt|;
 name|ss
@@ -2381,6 +2360,14 @@ block|}
 name|boolean
 name|success
 decl_stmt|;
+name|Counters
+name|ctrs
+init|=
+name|th
+operator|.
+name|getCounters
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|fatal
@@ -2399,7 +2386,7 @@ if|if
 condition|(
 name|checkFatalErrors
 argument_list|(
-name|th
+name|ctrs
 argument_list|,
 name|errMsg
 argument_list|)
@@ -2439,7 +2426,9 @@ expr_stmt|;
 comment|// update based on the final value of the counters
 name|updateCounters
 argument_list|(
-name|th
+name|ctrs
+argument_list|,
+name|rj
 argument_list|)
 expr_stmt|;
 name|SessionState
@@ -2480,20 +2469,15 @@ specifier|private
 name|void
 name|updateCounters
 parameter_list|(
-name|ExecDriverTaskHandle
-name|th
+name|Counters
+name|ctrs
+parameter_list|,
+name|RunningJob
+name|rj
 parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|RunningJob
-name|rj
-init|=
-name|th
-operator|.
-name|getRunningJob
-argument_list|()
-decl_stmt|;
 name|mapProgress
 operator|=
 name|Math
@@ -2560,14 +2544,6 @@ name|reduceProgress
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|Counters
-name|ctrs
-init|=
-name|th
-operator|.
-name|getCounters
-argument_list|()
-decl_stmt|;
 if|if
 condition|(
 name|ctrs
