@@ -315,6 +315,20 @@ name|Group
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|Counters
+import|;
+end_import
+
 begin_comment
 comment|/**  * HiveHistory.  *  */
 end_comment
@@ -1544,8 +1558,8 @@ parameter_list|,
 name|String
 name|taskId
 parameter_list|,
-name|RunningJob
-name|rj
+name|Counters
+name|ctrs
 parameter_list|)
 block|{
 name|String
@@ -1588,9 +1602,17 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+operator|(
 name|ti
 operator|==
 literal|null
+operator|)
+operator|||
+operator|(
+name|ctrs
+operator|==
+literal|null
+operator|)
 condition|)
 block|{
 return|return;
@@ -1616,10 +1638,7 @@ control|(
 name|Group
 name|group
 range|:
-name|rj
-operator|.
-name|getCounters
-argument_list|()
+name|ctrs
 control|)
 block|{
 for|for
@@ -1778,10 +1797,25 @@ name|Exception
 name|e
 parameter_list|)
 block|{
-name|e
+name|LOG
 operator|.
-name|printStackTrace
-argument_list|()
+name|warn
+argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
 if|if
